
[package]
name = "semaphore-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = []

[dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
semaphore-rs = { git = "https://github.com/semaphore-protocol/semaphore-rs.git", features = [
    "serde",
] }
uniffi = { version = "=0.29.0" }
num-bigint = "0.4.0"
thiserror = "2.0.12"
zk-kit-lean-imt = "0.1.0"
anyhow = "1.0.98"

# HALO2_DEPENDENCIES

# NOIR_DEPENDENCIES

[build-dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
uniffi = { version = "=0.29.0", features = ["build"] }

# CIRCOM_DEPENDENCIES

[patch.crates-io]
circom-witnesscalc = { git = "https://github.com/zkmopro/circom-witnesscalc.git", branch = "update-bindgen" } # TODO: https://github.com/iden3/circom-witnesscalc/pull/31
