
[package]
name = "semaphore-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = []

[dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git", branch = "flutter-ffi", features = ["uniffi"] }
semaphore-protocol = { version = "0.1.0", features = ["serde"] }
num-bigint = "0.4.0"
thiserror = "2.0.12"
zk-kit-lean-imt = "0.1.0"
anyhow = "1.0.98"

# HALO2_DEPENDENCIES

# NOIR_DEPENDENCIES

# CIRCOM_DEPENDENCIES
